specify jenkins-ci rev to build exactly. bump maven mem