@@ -14,5 +14,7 @@ cd $out
 export FONTCONFIG_FILE=${fontsConf}
 export FC_DEBUG=5
 
+export MAVEN_OPTS="-Xmx512M -XX:MaxPermSize=512M"
+
 mvn install -Plight-test --settings=${jenkins_m2_settings}
 
